adjust margin top on pet trio to ensure proper spacing

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,5 +1,6 @@
 .pet-trio {
   text-align: center;
+  margin-top: inherit;
   margin-left: 100px;
   margin-right: 100px;
   padding: 10px;
